take screenshots with Gimp

--- a/jpconj/help/ar/use.html
+++ b/jpconj/help/ar/use.html
@@ -136,6 +136,7 @@ LibreOffice ، OpenOffice ، MsOffice (2007-SP2 +) ، إلخ.</li>
 <img src="use_prefUI.jpg" alt="" >
 <p>
 يمكنك اختيار لغة التطبيق.
+أيضا، يمكنك اختيار ستايل الجداول.
 عند الضغط على زر "موافقة"، تتغير اللغة مباشرة.
 </p>
 
