--- a/jpconj/help/en/gui.html
+++ b/jpconj/help/en/gui.html
@@ -62,7 +62,7 @@ It contains this help and information about the application. <br>
 
 <h2 id="toolbars">Tool Bars</h2>
 <p>
-Tool Bars are used to access easily to functions, which are located in the menu bar. <br>
+Tool Bars are used to easily access functions, which are located in the menu bar. <br>
 <img src="gui_toolbars.jpg" alt="" >
 </p>
 
@@ -81,8 +81,8 @@ Then you can either press "Enter" key or push "Conjugate" button to get the resu
 <h2 id="type">Verb's Type</h2>
 <p>
 The application gives you information about the input verb. 
-If the verb doesn't exist in the database, it will shows you a message saying so. 
-Otherwise, it shows you the verbs type.
+If the verb doesn't exist in the database, it will show you a message saying so. 
+Otherwise, it shows you the verb's type.
 <br>
 This is a list of most important verb types:
 <ul>
