--- a/jpconj/help/en/use.html
+++ b/jpconj/help/en/use.html
@@ -55,7 +55,7 @@ The classification is based on the complexity of the conjugation, and the use ca
 <img src="gui_standard.jpg" alt="" >
 <p>
 It is used by Japanese learners to remember the conjugation of verbs. 
-If you want to learn verb conjugation as Japanese people do, this is the  right choice for you.
+If you want to learn verb conjugation as Japanese people do, this is the right choice for you.
 </p>
 
 <h4>2- Basic conjugation</h4>
@@ -70,11 +70,11 @@ These forms are: Imperfective, Hypothetical, Imperative, Conjunctive, Terminal, 
 <h4>3- Complex conjugation</h4>
 <img src="gui_complex.jpg" alt="" >
 <p>
-The complex forms are generated from the basic forms plus suffixes.
+The complex forms are generated from the basic forms followed by suffixes.
 The complex conjugation follow three axes:
 <ol>
 <li>Conjugation Form: the tense or case in which the verb is conjugated. For example: Present, Past, Imperative, Volitional, etc.</li>
-<li>Conjugation Politesse: Polite or Plain.</li>
+<li>Conjugation Politness: Polite or Plain.</li>
 <li>Conjugation Polarity: Positive or Negative.</li>
 </ol>
 When combined, they form a complex conjugation.
@@ -89,14 +89,14 @@ For example:
 
 <h2 id="save">Content Export and Print</h2>
 <p>
-You can save the conjugation content, either by Printing it or by exporting it to a file.
+You can save the conjugation content, either by printing it or by exporting it to a file.
 After conjugation, you can execute these two functions from "File" menu, or from the Tool-bar.
 You can choose which tables do you want to save in Preferences.
 </p>
 
 <h4>Content Export</h4>
 <p>
-To export conjugation content, press on "Content Export" menu, or the button
+To export conjugation content, select "Content Export" menu, or push the button
 <img src="img/export.png" alt="" />.
 There are three formats:
 <ul>
@@ -109,7 +109,7 @@ You can choose the file name and format in the "save as" dialog box.
 
 <h4>Content Print</h4>
 <p>
-To print conjugation content, press on "Print" menu, or the button
+To print conjugation content, select "Print" menu, or the button
 <img src="img/print.png" alt="" />.
 </p>
 
@@ -127,7 +127,7 @@ You can restore normal size from menu "View->Zoom->Normal Size", or by pushing t
 <h2 id="pref">Preferences</h2>
 <p>
 This is where you can control the application's preferences.
-You can get "Preferences" dialog box, either from "Edit->Preferences" menu, or pushing the button 
+You can get "Preferences" dialog box, either from "Edit->Preferences" menu, or by pushing the button 
 <img src="img/pref.png" alt="" />.
 The preferences are divided to two groups: User Interface and Content Export.
 </p>
@@ -136,13 +136,14 @@ The preferences are divided to two groups: User Interface and Content Export.
 <img src="use_prefUI.jpg" alt="" >
 <p>
 You can choose the application's language. 
+Also, you can choose tables style.
 When you press the OK button, the language will change immediately. 
 </p>
 
 <h4>Content Export</h4>
 <img src="use_prefExport.jpg" alt="">
 <p>
-In this panel, you can control the content you want to save (export or print).
+In this panel, you can control the content that you want to save (export or print).
 You can choose the exported tables, and if you want them styled or not.
 </p>
 
@@ -153,7 +154,7 @@ You can find this help by selecting "Help->Help Content" menu, or by pushing the
 </p>
 
 <p>
-If you want to get information about JapKatsuyou, you can select "Help->About" menu, or by pushing the button
+If you want to get information about JapKatsuyou, you can select "Help->About" menu, or you can push the button
 <img src="img/about.png" alt="" />.
 <br>
 <img src="use_about.jpg" alt="" >
@@ -162,12 +163,12 @@ If you want to get information about JapKatsuyou, you can select "Help->About" m
 <h2 id="tray">Close to tray</h2>
 <p>
 You can close the application to tray, by selecting "File->Hide" or by bushing the close button.
-If you want to exit the application, you can  press "File->Close" menu, or you can push the button 
+If you want to exit the application, you can select "File->Close" menu, or you can push the button 
 <img src="img/close.png" alt="" />.
 </p>
 
 <p>
-If you want to restore the application from tray, left click on tray icon, or right click on  it and push the button 
+If you want to restore the application from tray, left click on tray icon, or right click on it and push the button 
 <img src="img/show.png" alt="" />. <br>
 <img src="use_tray.jpg" alt="" >
 </p>
