--- a/jpconj/help/fr/use.html
+++ b/jpconj/help/fr/use.html
@@ -130,7 +130,8 @@ Vous pouvez rétablir la taille normale à partir du menu "Affichage-> Zoom-> Ta
 
 <h2 id="pref">Préférences</h2>
 <p>
-C'est ici que vous pouvez contrôler les préférences de l'application.
+C'est ici que vous pouvez contrôler les préférences de l'application. 
+Aussi, vous pouvez choisir le style de tables.
 Vous pouvez obtenir la boîte de dialogue "Préférences", soit à partir du menu "Edition-> Préférences", ou en appuyant sur la touche 
 <img src="img/pref.png" alt="" />.
 Les préférences sont divisées en deux groupes: l'interface utilisateur et l'export du contenu.
