fix tray icon language, utf8 html export, english language

--- a/jpconj/help/ar/about.html
+++ b/jpconj/help/ar/about.html
@@ -50,7 +50,7 @@ JapKatsuyou  هو تطبيق مجاني مفتوح المصدر.
 أو أي نسخة لاحقة.
 </p>
 
-<blockquote><i>
+<blockquote>
 <p>
  هذا البرنامج هو برنامج حر: يمكنك إعادة توزيعه و/أو تعديله 
  تحت شروط رخصة غنو العمومية والتي نشرتها مؤسسة البرمجيات الحرة،
@@ -67,7 +67,7 @@ JapKatsuyou  هو تطبيق مجاني مفتوح المصدر.
 إن لم يكن كذلك، راجع 
 <a href="http://www.gnu.org/licenses/"> http://www.gnu.org/licenses/</a>.
 </p>
-</i></blockquote>
+</blockquote>
 
 <h2 id="database">قاعدة بيانات الأفعال لـJapKatsuyou</h2>
 قاعدة بيانات الأفعال تم استخلاصها من قاموس <a href="http://www.csse.monash.edu.au/~jwb/edict.html">Edict2</a> المرخص تحت رخصة <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a>. 
