update english help

--- a/jpconj/Media/help/en/gui.html
+++ b/jpconj/Media/help/en/gui.html
@@ -21,8 +21,8 @@ The application contains five parts:
 <li><a href="#menubar">Menu Bar</a></li>
 <li><a href="#toolbars">Tool Bars</a></li>
 <li><a href="#search">Search Panel</a></li>
-<li><a href="#type">Verb's Type</a></li>
 <li><a href="#result">Conjugation Result</a></li>
+<li><a href="#exp">Examples</a></li>
 </ol>
 Also, the user interface is translated to languages other than English: Arabic, French, Japanese. 
 <br>
@@ -78,7 +78,13 @@ The input verb must achieve some conditions:
 Then you can either press "Enter" key or push "Conjugate" button to get the result.
 </p>
 
-<h2 id="type">Verb's Type</h2>
+<h2 id="result">Conjugation Result</h2>
+<p>
+The result contains three tables:
+</p>
+
+
+<h4>Information</h2>
 <p>
 The application gives you information about the input verb. 
 If the verb doesn't exist in the database, it will show you a message saying so. 
@@ -102,30 +108,28 @@ This is a list of most important verb types:
 <li>... etc.</li>
 </ul>
 </p>
+<img src="gui_info.jpg" />
 
-<h2 id="result">Conjugation Result</h2>
-<p>
-The result contains three tables:
-</p>
-
-<h4>1- Standard conjugation</h4>
+<h4>Standard conjugation</h4>
 <p>
 It is used by Japanese to learn verb conjugation. <br>
 <img src="gui_standard.jpg" />
 </p>
 
-<h4>2- Basic conjugation</h4>
+<h4>Basic conjugation</h4>
 <p>
 It shows the basic stems: a e u i o plus t-form. <br>
 <img src="gui_basic.jpg" />
 </p>
 
-<h4>3- Complex conjugation</h4>
+<h4>Complex conjugation</h4>
 <p>
 It shows some complex forms, which are originated using basic stems and suffixes.<br>
 <img src="gui_complex.jpg" />
 </p>
 
+<h2 id="exp">Examples</h2>
+<img src="gui_exp.jpg" />
 
 </body>
 </html>
