--- a/jpconj/Media/help/en/about.html
+++ b/jpconj/Media/help/en/about.html
@@ -33,15 +33,22 @@ The application can afford the following features:
 <li>The conjugation tables can be exported to three formats: pdf, odt, and htm.</li>
 </ul>
 </p>
+<p>
+Version 2 features:
+<ul>
+<li>Showing examples for verbs. </li>
+<li>More preferences: fonts and icons. </li>
+<li>Presenting furigana and romaji for new learners.</li>
+</ul>
+</p>
 
 <h2 id="license">JapKatsuyou License</h2>
 <p>
-Copyright 2013 Abdelkrime Aries
-(<a href="mailto:kariminfo0@gmail.com">kariminfo0@gmail.com</a>)
+Copyright 2013-2016 AnqaFalak group
 </p>
 <p>
-Copyright 2013 DzCoding group (JapKatsuyou team)
-(<a href="mailto:dzcoding@googlegroups.com">dzcoding@googlegroups.com</a>)
+Copyright 2013 Abdelkrime Aries
+(<a href="mailto:kariminfo0@gmail.com">kariminfo0@gmail.com</a>)
 </p>
 
 <p>
@@ -70,8 +77,57 @@ or later
 </p>
 </i></blockquote>
 
-<h2 id="database">JapKatsuyou Verbs Database</h2>
-The verb database is extracted from <a href="http://www.csse.monash.edu.au/~jwb/edict.html">Edict2</a> dictionary 
-which is licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a> license.
+<h2 id="legal">Legal information</h2>
+<h3>Code</h3>
+<p>
+The code of this software is licensed under 
+<a href="http://www.apache.org/licenses/LICENSE-2.0">
+Apache version 2
+</a>
+<br>
+<a href="https://github.com/AnqaFalak/JapKatsuyou">
+Source
+</a>
+</p>
+
+<h3>Third party</h3>
+<p>
+This software uses other materials:
+</p>
+
+<h4>Edict2</h4>
+<p>
+Used to verify the existence of verbs. <br>
+Copyright: <a href="mailto:jim.breen@monash.edu">Jim Breen</a> 
+and the <a href="http://www.edrdg.org/edrdg/index.html">EDRDG group</a>
+<br>
+Licensed under 
+<a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a>
+<br>
+<a href="http://www.csse.monash.edu.au/~jwb/edict.html">Source</a> 
+</p>
+
+<h4>Tatoeba examples</h4>
+<p>
+Used to afford examples in different languages. <br>
+Copyright: <a href="https://tatoeba.org">tatoeba.org</a> 
+<br>
+Licensed under 
+<a href="https://creativecommons.org/licenses/by/2.0/">CC-BY-2.0</a>
+<br>
+<a href="https://tatoeba.org/eng/downloads">Source</a> 
+</p>
+
+
+<h4>KIcona</h4>
+<p>
+Used for application's icons. <br>
+Copyright: <a href="mailto:kariminfo0@gmail.com">Abdelkrime Aries</a>
+<br>
+Licensed under 
+<a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a>
+<br>
+<a href="https://github.com/kariminf/K-Icona">Source</a> 
+</p>
 </body>
 </html>
