update arabic help

--- a/jpconj/Media/help/ar/gui.html
+++ b/jpconj/Media/help/ar/gui.html
@@ -21,8 +21,8 @@
 <li><a href="#menubar">شريط القوائم</a></li>
 <li><a href="#toolbars">أشرطة الأدوات</a></li>
 <li><a href="#search">لوحة البحث</a></li>
-<li><a href="#type">نوع الفعل</a></li>
 <li><a href="#result">نتيجة التصريف</a></li>
+<li><a href="#exp">أمثلة</a></li>
 </ol>
 إضافة إلى ذلك، واجهة المستخدم مترجمة إلى لغات أخرى غير العربية: الإنكليزية والفرنسية واليابانية.
 <br>
@@ -77,7 +77,13 @@
 بعدها يمكنك الضغط على "عودة" في لوحة المفاتيح، أو على زر "تصريف" للحصول على النتيجة.
 </p>
 
-<h2 id="type">نوع الفعل</h2>
+<h2 id="result">نتيجة التصريف</h2>
+<p>
+النتيجة تحتوي على ثلاثة جداول:
+</p>
+
+
+<h4>معلومات الفعل</h4>
 <p>
 التطبيق يعطيك معلومات حول الفعل المدخل.
 إن لم يكن الفعل متوفرا في قاعدة البيانات، ستظهر لك رسالة تخبرك بذلك.
@@ -101,30 +107,28 @@
 <li>... إلخ.</li>
 </ul>
 </p>
+<img src="gui_info.jpg" />
 
-<h2 id="result">نتيجة التصريف</h2>
-<p>
-النتيجة تحتوي على ثلاثة جداول:
-</p>
-
-<h4>1- التصريف القياسي </h4>
+<h4> التصريف القياسي </h4>
 <p>
 يستعمل لتعلم تصريف الأفعال اليابانية.<br>
 <img src="gui_standard.jpg" />
 </p>
 
-<h4>2- التصريف البسيط</h4>
+<h4> التصريف البسيط</h4>
 <p>
 يعطينا جذوع الفعل: a e u i o و t-form.<br>
 <img src="gui_basic.jpg" />
 </p>
 
-<h4>3- التصريف المعقد</h4>
+<h4> التصريف المعقد</h4>
 <p>
 يعطينا بعضا من التصاريف المعقدة، التي يمكن الحصول عليها من التصاريف البسيطة مضاف إليها بعض اللواحق.<br>
 <img src="gui_complex.jpg" />
 </p>
 
+<h2 id="exp">أمثلة</h2>
+<img src="gui_exp.jpg" />
 
 </body>
 </html>
